--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.10",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
     "react": "^18",
