--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@next/font": "^14.2.10",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
