--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
