--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
